______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.181:

* Build and release process:
  - Put the correct license files in the release.

* Specification:
  - Removed the extends attribute for the types.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.180:

* XINS/Java Server Framework:
  - Replaced some tabs that were in the generated function with 3 spaces.

* XINS/Java Common Library:
  - The EnumItem generated class now uses the static Item included in the
    class. The method equals() and hashcode don't need then to be overridden.

* XINS/Java Client Framework:
  - Removed files and methods related to the session ID.
  - Removed methods related to the success.

* Generated build file:
  - Improved the logdoc skeleton used for xins create-logdoc.

* Build and release process:
  - Renamed the depends directory to lib.
  - Moved all jar files in the lib directory.
  - Moved XINS javadoc to a newly created docs directory.
  - Added XINS guide in the release.
  - Added the examples in the release.
  - Added the HTML logdoc pages in the release.
  - Removed caller demo, moved to the new module xins-examples.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.179:

* XINS/Java Server Framework:
  - If the function name is missing or incorrect an _InvalidRequest is now
    returned.
  - Renamed in InvalidRequestResult and InvalidResponseResult the method
    addInvalidTypeForValue to addInvalidValueForType.

* Generated build file:
  - The client-<api> target now also creates the zip files containing the
    specdocs, the CAPI jar file, the CAPI source code and the CAPI javadoc.
  - The target used to create the project files has been changed to use
    the new directory structure and the 1.0 DTDs.

* Specification:
  - Removed the mapping attribute in <impl> or <impl-java>, the value is