@@ -244,7 +244,7 @@ final class CallResultBuilder extends Object implements CallResult {
     * @return
     *    the result code or <code>null</code> if no code was returned.
     */
-   public String getCode() {
+   public String getErrorCode() {
       return _code;
    }
 
